fixed home page block alignment (--alt with image left, shifted to right slightly)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4208,8 +4208,8 @@ textarea.hs-input {
     padding-right: 1.25rem;
   }
   .c-block-05--alt .c-block-05__row .c-block-05__col:last-child {
-    padding-left: 1.25rem;
-    padding-right: 3.125rem;
+    /*padding-left: rem-size(20px);*/
+    padding-right: 2.875rem;
     justify-content: flex-end;
   }
 }
