--- a/assets/scss/_c-blocks.scss
+++ b/assets/scss/_c-blocks.scss
@@ -638,8 +638,8 @@
             padding-right: rem-size(20px);
           }
           &:last-child {
-            padding-left: rem-size(20px);
-            padding-right: rem-size(50px);
+            /*padding-left: rem-size(20px);*/
+            padding-right: rem-size(46px);
             justify-content: flex-end;
           }
         }
